app/nginx-svc-external.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-svc-external
  name: nginx-svc-external
spec:
  ports:
  - name: http # Service端⼝的名称
    port: 80 # Service⾃⼰的端⼝, service a --> service b
    protocol: TCP # UDP TCP SCTP default: TCP
    targetPort: 80 # 后端应⽤的端⼝
  sessionAffinity: None
  type: ClusterIP

---
## 指定endpoint
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    app: nginx-svc-external #名字要跟svc的⼀致
  name: nginx-svc-external
  namespace: default
subsets:
- addresses:
  - ip: 220.181.38.148 # baidu
  ports:
  - name: http
    port: 80
    protocol: TCP
