app/k8s-dashboard-ingress.yaml
# deploy Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: "k8s-dashboard.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kubernetes-dashboard
              port:
                number: 443
