app/kubeapps-ingress.yaml
# deploy Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapps-ingress
  namespace: kubeapps
spec:
  ingressClassName: nginx
  rules:
  - host: "kubeapps-local.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kubeapps
              port:
                number: 80
